--- a/main.css
+++ b/main.css
@@ -1,3 +1,173 @@
 * {
-    font-family: 'Lato', sans-serif;
+  font-family: 'Lato', sans-serif;
+  padding: 0.01%;
+}
+
+#toggle {
+    display: none;
+  }
+  
+  /**
+    Hamburger
+  **/
+  .hamburger {
+    position: fixed;
+    top: 5em;
+    margin-top: -45px;
+    width: 2em;
+    height: 45px;
+    z-index: 5;
+  }
+  
+  .hamburger div {
+    position: relative;
+    width: 3em;
+    height: 7px;
+    border-radius: 3px;
+    background-color: #272a31;
+    margin-top: 8px;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  /**
+  Nav Styles
+  **/
+  .nav {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: #3d3d3d;
+    top: -100%; left: 0; right: 0; bottom: 0;
+    overflow: hidden;
+    transition: all 0.3s ease-in-out;
+    transform: scale(0);
+  }
+  .nav-wrapper {
+    position: relative;
+    overflow: hidden;
+    overflow-y: auto;
+    height: 100%;
+  }
+  nav {
+
+    margin-left: 25%;
+  }
+  nav a {
+    position: relative;
+    text-decoration: none;
+    color: #6ecddd;
+    font-size: 2em;
+    display: inline-block;
+    margin-top: 1.25em;
+    transition: color 0.2s ease-in-out;
+    letter-spacing: 1px;
+  }
+  nav a:before {
+    content: '';
+    height: 0;
+    position: absolute;
+    width: 0.25em;
+    background-color: white;
+    left: -0.5em;
+    transition: all 0.2s ease-in-out;
+  }
+  nav a:hover {
+    color: white;
+  }
+  nav a:hover:before {
+    height: 100%;
+  }
+  
+  /**
+  Animations
+  **/
+  #toggle:checked + .hamburger .top-bun {
+    transform: rotate(-45deg);
+    margin-top: 25px;
+  }
+  #toggle:checked + .hamburger .bottom-bun {
+    opacity: 0;
+    transform: rotate(45deg);
+  }
+  #toggle:checked + .hamburger .meat {
+    transform: rotate(45deg);
+    margin-top: -7px;
+  }
+  
+  #toggle:checked + .hamburger + .nav {
+    top: 0;
+    transform: scale(1);
+  }
+
+#home {
+    background-color: #d3d3d3;
+}
+
+#home h1 {
+    font-weight: 900;
+    color: #ec5242;
+}
+
+#home h2 {
+    font-weight: 400;
+    color: #ec5242;
+}
+
+.home-p {
+    border: 2px solid white;
+    background-color: #d3d3d3;
+}
+
+#home h3 {
+    font-weight: 900;
+}
+
+#main-program {
+    background-color: #272a31;
+    color: white;
+    text-align: center;
+}
+
+.program-title {
+    font-weight: 400;
+    display: flex;
+    justify-content: center;
+}
+
+.limit-border-bottom {
+    position: absolute;
+    width: 80px;
+    border-bottom: 2px solid #ec5242;
+    height: 10vh;
+}
+
+.program-cards {
+  margin-top: 10vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.program-item {
+  display: flex;
+  background-color: darkblue;;
+  align-items: center;
+  margin-bottom: 5%;
+  justify-content: flex-end;
+}
+
+.program-item img {
+  min-width: 50px;
+  min-height: 50px;
+  margin-left: 3%;
+}
+
+.program-item h3{
+  color: #ec5242;
+  margin-left: 3%;
+}
+
+.program-item p {
+  text-align: left;
+  margin-left: 3%;
+  width: fit-content;
 }
