program-title class change to section-title
featured speakers section add

--- a/main.css
+++ b/main.css
@@ -128,7 +128,7 @@
     text-align: center;
 }
 
-.program-title {
+.section-title {
     font-weight: 400;
     display: flex;
     justify-content: center;
