--- a/main.css
+++ b/main.css
@@ -182,4 +182,41 @@
 
 #speaker-profiles {
   display: flex;
+  flex-direction: column;
+  height: 100vh;
+  overflow: hidden;
+}
+
+#person-profile {
+  display: flex;
+}
+
+#person-profile h3 {
+  font-weight: bold;
+}
+
+#person-profile h4 {
+  color:#ec5242;
+  font-style: italic;
+}
+
+.person-text {
+  margin-left: 4vh;
+}
+
+#see-more-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 9vh;
+  background-color: white;
+  border: 1px solid gray;
+  border-radius: 5px;
+  font-size: 1.2rem;
+}
+
+#more-arrow {
+  width: 25px;
+  padding-left: 1vh;
 }
