speakers js change
object now is an array
for in loop change to a for loop

--- a/main.css
+++ b/main.css
@@ -205,9 +205,12 @@ nav a:hover::before {
   flex-direction: column;
 }
 
+.person-image {
+  width: 30%;
+}
+
 .hiding {
-  height: 100vh;
-  overflow: hidden;
+  display: none;
 }
 
 #person-profile {
