limit-border-bottom center

--- a/main.css
+++ b/main.css
@@ -153,6 +153,7 @@ nav a:hover::before {
   display: flex;
   text-align: center;
   flex-direction: column;
+  align-items: center;
 }
 
 .limit-border-bottom {
