program item bakcground change and footer img width adjust

--- a/main.css
+++ b/main.css
@@ -292,6 +292,10 @@ footer {
   align-items: center;
 }
 
+footer img {
+  width: 50%;
+}
+
 @media (min-width: 768px) {
   .hamburger {
     display: none;
