--- a/main.css
+++ b/main.css
@@ -341,6 +341,13 @@ nav a:hover::before {
 #partners {
   background-color: #3d3d3d;
   color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#partners img {
+  width: 50%;
 }
 
 footer {
@@ -460,7 +467,6 @@ footer img {
 
 .event-link {
   width: 45%;
-  height: 15em;
 }
 
 }
